p3/confs/willapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: willapp
    namespace: default
spec:
    replicas: 1
    selector:
        matchLabels:
            app: willapp
    template:
        metadata:
            labels:
                app: willapp
        spec:
            containers:
                - name: willapp
                  image: wil42/playground:v1
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 8888
                        name: willapp_port
                        protocol: TCP
                  readinessProbe:
                      httpGet:
                          port: web
                          path: /
