p3/confs/willapp-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: willapp-service
    namespace: dev
spec:
    type: NodePort
    selector:
        app: willapp
    ports:
        - name: willapp_port
          port: 80
          targetPort: willapp_port
